# demo_rtsp_mpp_decoder

./: .gitignore  README.md
rtsp_mpp_decoder/: CMakeLists.txt  config.ini.example  rtsp_mpp_decoder.sh
rtsp_mpp_decoder/include/: encode_video.h  inference.h  label_render.h  mpp_decoder.h  postprocess.h  rknn_type.h  rtsp_server.h  yolov8.h
rtsp_mpp_decoder/src/: dma_alloc.cpp  encode_video.cpp  inference.cpp  label_render.cpp  main.cpp  mpp_decoder.cpp  postprocess.cpp  rtsp_server.cpp
